# TinyMatrixMath

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Serializer_8hpp_source.html  TCP__control__policy_8hpp_source.html  TCP__controller__LTI_8hpp_source.html  TCP__controller__PID_8hpp_source.html  TCP__controller__passthrough_8hpp_source.html  TCP__robot__link_8hpp_source.html  TCP__states_8hpp_source.html  TCP__utils_8hpp_source.html  TMM__enable__if_8hpp_source.html  TMM__matrix_8hpp_source.html  TMM_enable_if.hpp  TMM_matrix.h  TMM_matrix.hpp  TMM_squarematrix.h  TMM_vector.h  TinyControlPolicies_8hpp_source.html  TinyMatrixMath.hpp  TinyMatrixMath_8hpp_source.html  annotated.html  annotated_dup.js  classLink-members.html  classLink.html  classLink.js  classes.html  classserializer_1_1Deserializer-members.html  classserializer_1_1Deserializer.html  classserializer_1_1Deserializer.js  classserializer_1_1Serializer-members.html  classserializer_1_1Serializer.html  classserializer_1_1Serializer.js  classtcp_1_1ControlPolicy-members.html  classtcp_1_1ControlPolicy.html  classtcp_1_1ControlPolicy.js  classtcp_1_1Controller__LTI-members.html  classtcp_1_1Controller__LTI.html  classtcp_1_1Controller__LTI.js  (+41 more)
.github/workflows/: arduino_compile_examples.yml  arduino_lint.yml  check-arduino.yml  check-cmake.yml  cmake_build_tests.yml  cmake_docs.yml  cmake_tests.yml  compile-examples.yml
cmake_examples/01_TMM_demo/: CMakeLists.txt  main.cpp
cmake_examples/02_TMM_benchmark_adds/: CMakeLists.txt  main.cpp
cmake_examples/TMM_demo/: CMakeLists.txt  main.cpp
docs/: Doxyfile.in
examples/TMM_demo/: TMM_demo.ino
examples/tinymatrixmath_demo/: tinymatrixmath_demo.ino
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: Serializer.cpp  Serializer.hpp  TCP_Serializable.hpp  TCP_control_policy.hpp  TCP_controller_LTI.hpp  TCP_controller_PID.hpp  TCP_controller_passthrough.hpp  TCP_robot_link.hpp  TCP_states.hpp  TCP_utils.cpp  TCP_utils.hpp  TMM_enable_if.hpp  TMM_matrix.cpp  TMM_matrix.hpp  TinyControlPolicies.cpp  TinyControlPolicies.hpp  TinyMatrixMath.cpp
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  basic_tests.cc
test/serializer/: CMakeLists.txt  test_serializer.cc
test/tinycontrolpolicies/: CMakeLists.txt  test_lti.cc  test_pid.cc
test/tinymatrixmath/: CMakeLists.txt  float_eq.hpp  inline_matrix_ops.cc  matrix_generators.cc  matrix_inverse.cc  util_float_eq.cc
